# biofm-survey

./: .gitignore  Justfile  README.md  index.json  insights.md  modalities.md  of.html  pyproject.toml
.github/: copilot-instructions.md
notes/: a-deep-generative-model-2017.md  a-foundation-model-of-2025.md  a-general-purpose-self-2023.md  a-multimodal-approach-for-2024.md  a-phylogenetic-approach-to-2025.md  a-survey-on-trustworthiness-2024.md  a-systematic-survey-and-2026.md  a-visual-language-foundation-2024.md  a-whole-slide-foundation.md  accurate-prediction-of-protein-2021.md  accurate-rna-3d-structure-2022.md  accurate-structure-prediction-of-2024.md  aido-accurate-model-of-2024.md  alignment-or-integration-rethinking-2026.md  alphafold-distillation-for-protein-2022.md  alphafold-two-years-on-2024.md  an-explainable-biomedical-foundation-2025.md  ankh-optimized-protein-language-2023.md  beacon-benchmark-for-comprehensive-2024.md  biobert-a-pre-trained-2019.md  biogpt-generative-pre-trained-2022.md  biological-structure-and-function-2021.md  biomedclip-a-multimodal-biomedical-2023.md  bioreason-incentivizing-multimodal-biological-2025.md  boosting-in-silicon-directed-2025.md  boundary-aware-instance-segmentation-2026.md  caduceus-bi-directional-equivariant-2024.md  cell2text-multimodal-llm-for-2025.md  cellpaintr-generalizable-representation-learning-2025.md  cellplm-pre-training-of-2023.md  cellpose-a-morphological-analysis-2024.md  cellverse-do-large-language-2025.md  cents-generating-synthetic-electricity-2025.md  character-level-tokenizations-as-2024.md  (+139 more)
(+24 files in other folders)
